--- a/pages/Tutorials/Subscribe.mdx
+++ b/pages/Tutorials/Subscribe.mdx
@@ -11,7 +11,7 @@ This tutorial will guide you on how to create a simple `Subscribe` button with c
       console.log("New subscriber: ", address);
     }}
     onUnsubscribe={(address) => {
-      console.log("Unsubscriber: ", address);
+      console.log("Unsubscribed: ", address);
     }}
     onError={(error) => console.log("Error subscribing: " + error)}
     env="production"
