--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,9 +21,9 @@ bun start
 
 ### Frames
 
-- [Request Inbox](https://xmtp-prototypes.vercel.app/Frames/RequestInbox)
-- [Subscribe](https://xmtp-prototypes.vercel.app/Frames/Subscribe)
-- [Broadcast](https://xmtp-prototypes.vercel.app/Frames/Broadcast)
+- [Request Inbox](/Frames/RequestInbox)
+- [Subscribe](/Frames/Subscribe)
+- [Broadcast](/Frames/Broadcast)
 
 ### Example repos
 
@@ -31,17 +31,11 @@ bun start
 - [xmtp-inbox-portable-consent](https://github.com/fabriguespe/xmtp-inbox-portable-consent)
 - [xmtp-subscribe-portable-consent](https://github.com/fabriguespe/xmtp-subscribe-portable-consent)
 
-### Widgets
+#### Widgets
 
 - [Subscribe](/Widgets/Subscribe): Subscribe to another wallet, newsletter, company or campaign.
 
 - [Enable](/Widgets/Enable): Button for enabling XMTP identity for the first time.
-
-- [Buttons](/Widgets/Buttons): Styled buttons with a dropdown showcasing different clients.
-
-- [Profile Card](/Widgets/ProfileCard): This feature displays a user's profile card with a link to message directly.
-
-- [Contact Link](/Widgets/ContactLink): Linked image-only logo to put on footers, headers, navbars, profiles, etc.
 
 - [Floating Inbox](/Widgets/FloatingInbox): Embeddable web bottom right chat widget with content types and js sdk.
 
@@ -49,8 +43,14 @@ bun start
 
 - [Floating Inbox (Hooks)](/Widgets/FloatingInbox-hooks): Inbox built with the react sdk hooks and only text.
 
-- [Floating Inbox (Hooks) PWA](/Widgets/FloatingInbox-hooks): Inbox built with the react sdk and hooks in PWA mode.
-
 - [Broadcast](/Widgets/Broadcast): Broadcast widgets for sending a message to multiple wallets.
 
-- [Contact Page](/Widgets/ContactPage): Page that opens a XMTP inboxes with deeplinking and metadata from ENS.
+#### Contact Widgets
+
+- [Buttons](/Widgets/Contact/Buttons): Styled buttons with a dropdown showcasing different clients.
+
+- [Profile Card](/Widgets/Contact/ProfileCard): This feature displays a user's profile card with a link to message directly.
+
+- [Contact Link](/Widgets/Contact/ContactLink): Linked image-only logo to put on footers, headers, navbars, profiles, etc.
+
+- [Contact Page](/Widgets/Contact/ContactPage): Page that opens a XMTP inboxes with deeplinking and metadata from ENS.
