--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,11 +7,11 @@ bun install
 bun start
 ```
 
-### Blog Posts
+#### Blog Posts
 
 - [How XMTP Widgets can change the way we communicate online](/Posts/Contact)
 
-### Tutorials
+#### Tutorials
 
 - [Subscribe to a newsletter with XMTP](/Tutorials/Subscribe)
 - [Broadcast a message to multiple wallets](/Tutorials/Broadcast)
@@ -19,13 +19,13 @@ bun start
 - [How to Create an ENS + XMTP Contact Page in React](/Tutorials/ContactPage)
 - [Understanding and Building Portable Consent in XMTP](/Tutorials/PortableConsent)
 
-### Frames
+#### Frames
 
 - [Request Inbox](/Frames/RequestInbox)
 - [Subscribe](/Frames/Subscribe)
 - [Broadcast](/Frames/Broadcast)
 
-### Example repos
+#### Example repos
 
 - [xmtp-broadcast](https://github.com/fabriguespe/xmtp-broadcast)
 - [xmtp-inbox-portable-consent](https://github.com/fabriguespe/xmtp-inbox-portable-consent)
