--- a/pages/Posts/Contact.mdx
+++ b/pages/Posts/Contact.mdx
@@ -8,7 +8,7 @@ import { Button } from "/components/Button";
 Remember the good old days of clicking a simple mailto: link to send an email? The convenience of initiating an email directly from a web page revolutionized online communication in its time. As we move into the era of Web3, XMTP widgets are poised to become the "mailto" of the decentralized communication world. By integrating these widgets, you can offer a seamless experience across multiple apps in the ecosystem, including [Coinbase Wallet](https://www.coinbase.com/wallet), [Converse](https://getconverse.app/), [Hey](https://hey.xyz/), [Orb](https://www.orb.ac/), and [xmtp.chat](https://xmtp.chat/). This blog post will walk you through how these widgets are making Web3 communication as simple as the `mailto:` link made email.
 
 - **Contact Link**: Enables you to contact someone through a simple url.
-- **Buttons**: Offers deeplink buttons to multiple apps of the xmtp ecosyste.
+- **Buttons**: Offers deeplink buttons to multiple apps of the xmtp ecosystem.
 - **Profile Card**: Similar to an email signature, provides link and context.
 
 #### Contact Link Widget
