--- a/pages/Tutorials/Widgets/FloatingInbox-text.mdx
+++ b/pages/Tutorials/Widgets/FloatingInbox-text.mdx
@@ -234,7 +234,6 @@ export function Inbox({ wallet, env, relative = false }) {
       handleLogout();
       return;
     }
-    console.log("entra7");
     // Get the address from the signer
     let address = await getAddress(signer);
     // Load keys for the address
@@ -483,7 +482,6 @@ export const ConversationContainer = ({
       const conv2 = await client.conversations.newConversation(
         "0xa64af7F78DE39A238Ecd4ffF7D6D410DBACe2dF0"
       );
-      console.log("conv2 messages", await conv2.messages());
 
       stream = await client.conversations.stream();
       for await (const conversation of stream) {
@@ -851,9 +849,7 @@ export const MessageItem = ({ message, senderAddress, client }) => {
         return <div style={styles.renderedMessage}>{message?.content}</div>;
       }
     } catch {
-      return message?.fallbackContent ? (
-        message?.fallbackContent
-      ) : message?.contentFallback ? (
+      return message?.contentFallback ? (
         message?.contentFallback
       ) : (
         <div style={styles.renderedMessage}>{message?.content}</div>
