Remote attachment interactive concept

--- a/pages/Tutorials/Broadcast.mdx
+++ b/pages/Tutorials/Broadcast.mdx
@@ -1,22 +1,15 @@
-import { Broadcast } from "/components/Broadcast";
-
 # How to Broadcast with XMTP
 
 This tutorial will guide you on how to create a simple `Broadcast` that enables the user to broadcast messages to one or many specified Ethereum addresses.
 
-<div className="widget-container">
-  <Broadcast
-    env="production"
-    walletAddresses={[
-      "0x93E2fc3e99dFb1238eB9e0eF2580EFC5809C7204",
-      "0xdf9A8d961A55e75E1FAEc72037f89251f84ADCc3",
-    ]}
-    placeholderMessage="Enter a broadcast message here"
-    onMessageSuccess={(message) =>
-      console.log("Message sent" + message.content)
-    }
-  />
-</div>
+<iframe
+  src="/Frames/Broadcast"
+  width="100%"
+  height="274px"
+  frameBorder="0"
+  scrolling="no"
+  allowFullScreen
+></iframe>
 
 #### Import XMTP Client and Ethers Library
 
