--- a/pages/Tutorials/FloatingInbox.mdx
+++ b/pages/Tutorials/FloatingInbox.mdx
@@ -1,12 +1,15 @@
 # Create a Floating Inbox widget with XMTP
 
-import { FloatingInbox } from "/components/FloatingInbox-text";
-
 This tutorial will guide you on how to create a simple `Subscribe` that enables the user to subscribe to your messages or notifications.
 
-<div className="widget-container">
-  <FloatingInbox env="production" />
-</div>
+<iframe
+  src="/Frames/FloatingInbox"
+  width="100%"
+  height="400px"
+  frameBorder="0"
+  scrolling="no"
+  allowFullScreen
+></iframe>
 
 ### Step 1: Initial Setup
 
