--- a/pages/Tutorials/RemoteAttachments.mdx
+++ b/pages/Tutorials/RemoteAttachments.mdx
@@ -1,12 +1,15 @@
-import { FloatingInbox } from "/components/FloatingInbox-text";
-
 # Support attachments in your app built with XMTP
 
 Use the attachment and remote attachment content types to support attachments in your app. Remote attachments of any size can be sent using the `RemoteAttachmentCodec` and a storage provider.
 
-<div className="widget-container" style={{ padding: "0px", height: "400px" }}>
-  <FloatingInbox env="production" isContained={true} />
-</div>
+<iframe
+  src="/Frames/RemoteAttachment"
+  width="100%"
+  height="400px"
+  frameBorder="0"
+  scrolling="no"
+  allowFullScreen
+></iframe>
 
 ## Configure the content types
 
