--- a/pages/Tutorials/Subscribe.mdx
+++ b/pages/Tutorials/Subscribe.mdx
@@ -4,21 +4,14 @@ import { Subscribe } from "/components/Subscribe";
 
 This tutorial will guide you on how to create a simple `Subscribe` button with consent that enables the user to subscribe to your messages or notifications.
 
-<div className="widget-container">
-  <Subscribe
-    senderAddress="0x93E2fc3e99dFb1238eB9e0eF2580EFC5809C7204"
-    onSubscribe={(address) => {
-      console.log("New subscriber: ", address);
-    }}
-    onUnsubscribe={(address) => {
-      console.log("Unsubscribed: ", address);
-    }}
-    onError={(error) => console.log("Error subscribing: " + error)}
-    env="production"
-/>
-
-</div>
-<div id="subscribeArray" style={{ textAlign: "center", fontSize: "12px" }}></div>
+<iframe
+  src="/Frames/Subscribe"
+  width="100%"
+  height="162px"
+  frameBorder="0"
+  scrolling="no"
+  allowFullScreen
+></iframe>
 
 #### Import libraries
 
