--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -17,6 +17,7 @@ bun start
 - [Broadcast a message to multiple wallets](/Tutorials/Broadcast)
 - [Create a Floating Inbox widget with XMTP](/Tutorials/FloatingInbox)
 - [How to Create an ENS + XMTP Contact Page in React](/Tutorials/ContactPage)
+- [Support attachments in your app built with XMTP](/Tutorials/RemoteAttachments)
 - [Understanding and Building Portable Consent in XMTP](/Tutorials/PortableConsent)
 
 #### Frames
@@ -24,6 +25,9 @@ bun start
 - [Request Inbox](/Frames/RequestInbox)
 - [Subscribe](/Frames/Subscribe)
 - [Broadcast](/Frames/Broadcast)
+- [ContactPage](/Frames/ContactPage)
+- [FloatingInbox](/Frames/FloatingInbox)
+- [RemoteAttachments](/Frames/RemoteAttachments)
 
 #### Example repos
 
@@ -34,23 +38,15 @@ bun start
 #### Widgets
 
 - [Subscribe](/Widgets/Subscribe): Subscribe to another wallet, newsletter, company or campaign.
-
 - [Enable](/Widgets/Enable): Button for enabling XMTP identity for the first time.
-
 - [Floating Inbox](/Widgets/FloatingInbox): Embeddable web bottom right chat widget with content types and js sdk.
-
 - [Floating Inbox (Text)](/Widgets/FloatingInbox-text): Embeddable web bottom right chat widget with only text.
-
 - [Floating Inbox (Hooks)](/Widgets/FloatingInbox-hooks): Inbox built with the react sdk hooks and only text.
-
 - [Broadcast](/Widgets/Broadcast): Broadcast widgets for sending a message to multiple wallets.
 
 #### Contact Widgets
 
 - [Buttons](/Widgets/Contact/Buttons): Styled buttons with a dropdown showcasing different clients.
-
 - [Profile Card](/Widgets/Contact/ProfileCard): This feature displays a user's profile card with a link to message directly.
-
 - [Contact Link](/Widgets/Contact/ContactLink): Linked image-only logo to put on footers, headers, navbars, profiles, etc.
-
 - [Contact Page](/Widgets/Contact/ContactPage): Page that opens a XMTP inboxes with deeplinking and metadata from ENS.
