--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -20,7 +20,13 @@ bun start
 - [Support attachments in your app built with XMTP](/Tutorials/RemoteAttachments)
 - [Understanding and Building Portable Consent in XMTP](/Tutorials/PortableConsent)
 
-#### Frames
+#### Example repos
+
+- [xmtp-broadcast](https://github.com/fabriguespe/xmtp-broadcast)
+- [xmtp-inbox-portable-consent](https://github.com/fabriguespe/xmtp-inbox-portable-consent)
+- [xmtp-subscribe-portable-consent](https://github.com/fabriguespe/xmtp-subscribe-portable-consent)
+
+#### iFrames
 
 - [Request Inbox](/Frames/RequestInbox)
 - [Subscribe](/Frames/Subscribe)
@@ -28,12 +34,6 @@ bun start
 - [ContactPage](/Frames/ContactPage)
 - [FloatingInbox](/Frames/FloatingInbox)
 - [RemoteAttachments](/Frames/RemoteAttachments)
-
-#### Example repos
-
-- [xmtp-broadcast](https://github.com/fabriguespe/xmtp-broadcast)
-- [xmtp-inbox-portable-consent](https://github.com/fabriguespe/xmtp-inbox-portable-consent)
-- [xmtp-subscribe-portable-consent](https://github.com/fabriguespe/xmtp-subscribe-portable-consent)
 
 #### Widgets
 
