--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -31,9 +31,13 @@ bun start
 - [Request Inbox](/Frames/RequestInbox)
 - [Subscribe](/Frames/Subscribe)
 - [Broadcast](/Frames/Broadcast)
-- [ContactPage](/Frames/ContactPage)
 - [FloatingInbox](/Frames/FloatingInbox)
 - [RemoteAttachments](/Frames/RemoteAttachments)
+- Contact
+  - [ContactPage](/Frames/ContactPage)
+  - [ContactLink](/Frames/ContactLink)
+  - [Buttons](/Frames/Buttons)
+  - [ProfileCard](/Frames/ProfileCard)
 
 #### Widgets
 
@@ -43,10 +47,8 @@ bun start
 - [Floating Inbox (Text)](/Widgets/FloatingInbox-text): Embeddable web bottom right chat widget with only text.
 - [Floating Inbox (Hooks)](/Widgets/FloatingInbox-hooks): Inbox built with the react sdk hooks and only text.
 - [Broadcast](/Widgets/Broadcast): Broadcast widgets for sending a message to multiple wallets.
-
-#### Contact Widgets
-
-- [Buttons](/Widgets/Contact/Buttons): Styled buttons with a dropdown showcasing different clients.
-- [Profile Card](/Widgets/Contact/ProfileCard): This feature displays a user's profile card with a link to message directly.
-- [Contact Link](/Widgets/Contact/ContactLink): Linked image-only logo to put on footers, headers, navbars, profiles, etc.
-- [Contact Page](/Widgets/Contact/ContactPage): Page that opens a XMTP inboxes with deeplinking and metadata from ENS.
+- #### Contact Widgets
+  - [Buttons](/Widgets/Contact/Buttons): Styled buttons with a dropdown showcasing different clients.
+  - [Profile Card](/Widgets/Contact/ProfileCard): This feature displays a user's profile card with a link to message directly.
+  - [Contact Link](/Widgets/Contact/ContactLink): Linked image-only logo to put on footers, headers, navbars, profiles, etc.
+  - [Contact Page](/Widgets/Contact/ContactPage): Page that opens a XMTP inboxes with deeplinking and metadata from ENS.
