--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -47,7 +47,7 @@ bun start
 - [Floating Inbox (Text)](/Widgets/FloatingInbox-text): Embeddable web bottom right chat widget with only text.
 - [Floating Inbox (Hooks)](/Widgets/FloatingInbox-hooks): Inbox built with the react sdk hooks and only text.
 - [Broadcast](/Widgets/Broadcast): Broadcast widgets for sending a message to multiple wallets.
-- #### Contact Widgets
+- Contact
   - [Buttons](/Widgets/Contact/Buttons): Styled buttons with a dropdown showcasing different clients.
   - [Profile Card](/Widgets/Contact/ProfileCard): This feature displays a user's profile card with a link to message directly.
   - [Contact Link](/Widgets/Contact/ContactLink): Linked image-only logo to put on footers, headers, navbars, profiles, etc.
