--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,7 +9,7 @@ bun start
 
 #### Blog Posts
 
-- [How XMTP Widgets can change the way we communicate online](/Posts/Contact)
+- [The Web3 mailto:ne](/Posts/Contact)
 
 #### Tutorials
 
