--- a/pages/Posts/Contact.mdx
+++ b/pages/Posts/Contact.mdx
@@ -3,8 +3,6 @@ import { Button } from "/components/Button";
 
 # The Web3 `mailto:`
 
-## How XMTP Widgets can change the way we communicate online
-
 Remember the good old days of clicking a simple mailto: link to send an email? The convenience of initiating an email directly from a web page revolutionized online communication in its time. As we move into the era of Web3, XMTP widgets are poised to become the "mailto" of the decentralized communication world. By integrating these widgets, you can offer a seamless experience across multiple apps in the ecosystem, including [Coinbase Wallet](https://www.coinbase.com/wallet), [Converse](https://getconverse.app/), [Hey](https://hey.xyz/), [Orb](https://www.orb.ac/), and [xmtp.chat](https://xmtp.chat/). This blog post will walk you through how these widgets are making Web3 communication as simple as the `mailto:` link made email.
 
 - **Contact Link**: Enables you to contact someone through a simple url.
@@ -15,12 +13,14 @@ Remember the good old days of clicking a simple mailto: link to send an email? T
 
 The `Contact Link` Widget is akin to the compose window that pops up when you click a mailto: link. It opens a contact form that's associated with a specified ENS domain or wallet address, making the process of reaching out straightforward.
 
-<div className="widget-container ">
-  <ContactLink
-    domain="shanemac.eth"
-    walletAddress="0x7E0b0363404751346930AF92C80D1fef932Cc48a"
-  />
-</div>
+<iframe
+  src="/Frames/ContactLink"
+  width="100%"
+  height="162px"
+  frameBorder="0"
+  scrolling="no"
+  allowFullScreen
+></iframe>
 
 Here is an example of how to use the `ContactLink` component:
 
@@ -47,9 +47,7 @@ xmtp.chat
   <Button
     domain="shanemac.eth"
     walletAddress="0x7E0b0363404751346930AF92C80D1fef932Cc48a"
-
-/>
-
+  />
 </div>
 
 Here is an example of how to use the `Button` widget in your project. In this example, we are creating a button for the ENS domain "shanemac.eth" and the associated wallet address. The button will have a light theme and a medium size.
