--- a/pages/Posts/Contact.mdx
+++ b/pages/Posts/Contact.mdx
@@ -3,7 +3,9 @@ import { Button } from "/components/Button";
 
 # The Web3 `mailto:`
 
-Remember the good old days of clicking a simple mailto: link to send an email? The convenience of initiating an email directly from a web page revolutionized online communication in its time. As we move into the era of Web3, XMTP widgets are poised to become the "mailto" of the decentralized communication world. By integrating these widgets, you can offer a seamless experience across multiple apps in the ecosystem, including [Coinbase Wallet](https://www.coinbase.com/wallet), [Converse](https://getconverse.app/), [Hey](https://hey.xyz/), [Orb](https://www.orb.ac/), and [xmtp.chat](https://xmtp.chat/). This blog post will walk you through how these widgets are making Web3 communication as simple as the `mailto:` link made email.
+Remember the good old days of clicking a simple mailto: link to send an email? The convenience of initiating an email directly from a web page revolutionized online communication in its time. As we move into the era of Web3, XMTP could become the "mailto" of the decentralized communication world.
+
+By integrating these widgets, you can offer a seamless experience across multiple apps in the ecosystem, including [Coinbase Wallet](https://www.coinbase.com/wallet), [Converse](https://getconverse.app/), [Hey](https://hey.xyz/), [Orb](https://www.orb.ac/), and [xmtp.chat](https://xmtp.chat/).
 
 - **Contact Link**: Enables you to contact someone through a simple url.
 - **Buttons**: Offers deeplink buttons to multiple apps of the xmtp ecosystem.
@@ -11,7 +13,7 @@ Remember the good old days of clicking a simple mailto: link to send an email? T
 
 #### Contact Link Widget
 
-The `Contact Link` Widget is akin to the compose window that pops up when you click a mailto: link. It opens a contact form that's associated with a specified ENS domain or wallet address, making the process of reaching out straightforward.
+The `Contact Link` is a straightforward hyperlink, like a `mailto:` link. Ideally it opens a deeplink app from the ecosystem that's associated with a specified ENS domain or wallet address. Can be use with xmtp’s logo and and in footers or headers of websites.
 
 <iframe
   src="/Frames/ContactLink"
@@ -40,8 +42,7 @@ For a complete working example, please refer to this complete widget page.
 
 #### Buttons Widget
 
-If mailto: links could also direct you to WhatsApp, Telegram, or any other messaging platform, the experience would be phenomenal, wouldn't it? The Buttons Widget does exactly this in the Web3 context. It offers deeplinks to multiple platforms like [Coinbase Wallet](https://www.coinbase.com/wallet), [Converse](https://getconverse.app/), Hey, [Orb](https://www.orb.ac/), and .
-xmtp.chat
+What If mailto: links could also direct you to WhatsApp, Telegram, or any other messaging platform, the experience would be phenomenal, wouldn't it? The Buttons Widget does exactly this in the Web3 context. It offers deeplinks to multiple platforms like [Coinbase Wallet](https://www.coinbase.com/wallet), [Converse](https://getconverse.app/), [Hey](https://hey.xyz/), [Orb](https://www.orb.ac/), and [xmtp.chat](https://xmtp.chat/).
 
 <div className="widget-container">
   <Button
@@ -50,7 +51,7 @@ xmtp.chat
   />
 </div>
 
-Here is an example of how to use the `Button` widget in your project. In this example, we are creating a button for the ENS domain "shanemac.eth" and the associated wallet address. The button will have a light theme and a medium size.
+Here is an example of how to use the `Button` widget in your project. In this example, we are creating a button for the ENS domain `shanemac.eth` and the associated wallet address. The button will have a light theme and a medium size.
 
 ```jsx
 <Button
@@ -70,7 +71,7 @@ import { ProfileCard } from "/components/ProfileCard";
 
 #### Profile Card Widget
 
-hink of the Profile Card Widget as an advanced form of the email signature, but with a lot more context and a built-in call-to-action. This widget offers a rounded snapshot of a user or entity, along with a direct line for communication.
+Think of the Profile Card Widget as an advanced form of the email signature, but with a lot more context and a built-in call-to-action. Same functionality of `Contact Link` but with more context, and event a custom phrase.
 
 <div className="widget-container">
   <ProfileCard
@@ -100,4 +101,4 @@ For a complete working example, please refer to this complete widget page.
 
 **Conclusion**
 
-The digital world is evolving, and as it does, our means of communication must adapt. XMTP widgets are a step toward making Web3 interactions as seamless and straightforward as clicking a mailto: link once was for email. By embracing these widgets, you can be on the forefront of this new era of online communication.
+The digital world is evolving, and as it does, our means of communication must adapt. XMTP widgets are a step toward making Web3 interactions as seamless and straightforward as clicking a mailto: link once was for email. By embracing these widgets, you can be on the forefront of this new era of online communication
