--- a/pages/Widgets/Subscribe.mdx
+++ b/pages/Widgets/Subscribe.mdx
@@ -109,7 +109,7 @@ export function Subscribe({
   };
 
   const connectWallet = async () => {
-    if (typeof window.ethereum !== undefined) {
+    if (typeof window.ethereum !== "undefined") {
       try {
         await window.ethereum.request({ method: "eth_requestAccounts" });
         const provider = new ethers.providers.Web3Provider(window.ethereum);
