--- a/pages/Tutorials/RequestInbox.mdx
+++ b/pages/Tutorials/RequestInbox.mdx
@@ -22,15 +22,25 @@ Managing user consent is essential for enhancing privacy and user experience. If
 <iframe src='/Frames/RequestInbox' width='50%' height='400px' frameBorder='0' scrolling='no' allowFullScreen></iframe>
 </div>
 
+## Considerations
+
+Before diving into the code let's consider important aspects while integrating consent features. For example, before making an allow or block action you should synchronize the updated consent list in order to **prevent overwriting network** consent from another app. For more details head to these sections of our docs:
+
+- [Understand user consent preferences](https://xmtp.org/docs/build/user-consent#understand-user-consent-preferences): Here are some of the ways user consent preferences are set
+- [Use consent preferences to respect user intent](https://xmtp.org/docs/build/user-consent#use-consent-preferences-to-respect-user-intent): Your app should aim to handle consent preferences appropriately because they are an expression of user intent.
+- [Synchronize user consent preferences](https://xmtp.org/docs/build/user-consent#synchronize-user-consent-preferences):All apps that use the user consent feature must adhere to the logic described in this section to keep the consent list on the network synchronized with local app user consent preferences, and vice versa.
+
+## Quickstart
+
 #### Initialize XMTP Client with Consent
 
-Here's your existing `initXmtp` function, updated to include the consent refresh logic.
+Here's your existing `initXmtpWithKeys` function, updated to include the consent refresh logic.
 
 ```jsx
 const initXmtpWithKeys = async function () {
   // ... previous code
   const xmtp = await Client.create(wallet);
-  // Add these lines to refresh the consent list
+  // Refresh the consent list to make sure your application is up-to-date with the network
   await xmtp.contacts.refreshConsentList();
 };
 ```
@@ -73,6 +83,20 @@ You can now create a separate inbox for requests. This inbox will only show the 
 }
 ```
 
+#### Refresh consent when opening a conversation
+
+To ensure that your application respects the latest user consent preferences, it's important to refresh the consent state every time a conversation is opened. This can be done by calling the `refreshConsentList` method of the XMTP client before any interaction within a conversation occurs.
+
+```jsx
+// Function to select and open a conversation
+const openConversation = async (conversation) => {
+  // Refresh the consent list to make sure your application is up-to-date with the network
+  await client.contacts.refreshConsentList();
+  // Now it's safe to open the conversation
+  setSelectedConversation(conversation);
+};
+```
+
 #### Allow and denied actions
 
 Every time you open a conversation on the request tab you can show a popup with the allow and deny actions. You can use the `consentState` property of the conversation object to show the popup only when the consent state is `unknown`.
@@ -85,11 +109,13 @@ const [showPopup, setShowPopup] = useState(
 
 // Function to handle the acceptance of a contact
 const handleAccept = async () => {
+  // Refresh the consent list first
+  await client.contacts.refreshConsentList();
   // Allow the contact
   await client.contacts.allow([conversation.peerAddress]);
   // Hide the popup
   setShowPopup(false);
-  // Refresh the consent list
+  // Refresh the consent list to make sure your application is up-to-date with the network
   await client.contacts.refreshConsentList();
   // Log the acceptance
   console.log("accepted", conversation.peerAddress);
@@ -97,6 +123,8 @@ const handleAccept = async () => {
 
 // Function to handle the blocking of a contact
 const handleBlock = async () => {
+  // Refresh the consent list first
+  await client.contacts.refreshConsentList();
   // Block the contact
   await client.contacts.deny([conversation.peerAddress]);
   // Hide the popup
@@ -108,9 +136,20 @@ const handleBlock = async () => {
 };
 ```
 
-#### Conclusion
+## Caution ⚠️
 
-By following these steps, you'll successfully integrate portable consent into your existing XMTP application. This enables users to have better control over who can send them messages, enhancing user privacy and experience.
+**Always synchronize consent states:** Before updating consent preferences on the network, ensure you refresh the consent list with `await xmtp.contacts.refreshConsentList();`. Update the network's consent list only in these scenarios:
+
+- **User Denies Contact:** Set to `denied` if a user blocks or unsubscribes.
+- **User Allows Contact:** Set to `allowed` if a user subscribes or enables notifications.
+- **Legacy Preferences:** Align the network with any existing local preferences.
+- **User Response:** Set to `allowed` if the user has engaged in conversation.
+
+Neglecting these guidelines can result in consent state conflicts and compromise user privacy.
+
+## Conclusion
+
+Consent has really evolved through the years. It started with email, then email marketing, and was the wild west until laws like GPDR stepped in. This is new chapter in the history of consent in a new era for privacy, portability, and ownership.
 
 #### Example repo
 
