--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -31,7 +31,8 @@ bun start
 - [Request Inbox](/Frames/RequestInbox)
 - [Subscribe](/Frames/Subscribe)
 - [Broadcast](/Frames/Broadcast)
-- [FloatingInbox](/Frames/FloatingInbox)
+- [Floating Inbox](/Frames/FloatingInbox)
+- [Frames Inbox](/Frames/FloatingInbox-frames)
 - [RemoteAttachments](/Frames/RemoteAttachment)
 - Contact
   - [ContactPage](/Frames/ContactPage)
@@ -44,8 +45,6 @@ bun start
 - [Subscribe](/Widgets/Subscribe): Subscribe to another wallet, newsletter, company or campaign.
 - [Enable](/Widgets/Enable): Button for enabling XMTP identity for the first time.
 - [Floating Inbox](/Widgets/FloatingInbox): Embeddable web bottom right chat widget with content types and js sdk.
-- [Floating Inbox (Text)](/Widgets/FloatingInbox-text): Embeddable web bottom right chat widget with only text.
-- [Floating Inbox (Hooks)](/Widgets/FloatingInbox-hooks): Inbox built with the react sdk hooks and only text.
 - [Broadcast](/Widgets/Broadcast): Broadcast widgets for sending a message to multiple wallets.
 - Contact
   - [Buttons](/Widgets/Contact/Buttons): Styled buttons with a dropdown showcasing different clients.
